<resources>
    <string name="app_name">Remmeds</string>
    <string name="navigation_drawer_open">Ouvrir menu</string>
    <string name="navigation_drawer_close">Fermer menu</string>
    <string name="nav_header_title">Prénom Nom</string>
    <string name="nav_header_subtitle">prenom.nom@mail.com</string>
    <string name="nav_header_desc">En-tete menu</string>
    <string name="action_settings">A propos</string>
    <string name="blank"> </string>

    <!-- NavigationBar -->
    <string name="accueil">Accueil</string>
    <string name="configuration">Configuration</string>
    <string name="historique">Historique</string>
    <string name="profil">Profil</string>
    <string name="repertoire">Répertoire</string>
    <string name="gestion">Pilulier</string>
    <string name="remmeds">RemMeds</string>
    <string name="disconnect">Déconnexion</string>

    <!-- HOME -->
    <string name="titre_textView_layout_home">RemMeds, reprenez le contrôle</string>
    <string name="description_imageView_layout_home">logo RemMeds</string>

    <!-- SECTIONS -->
    <string name="titre_textview_layout_pilulier">Un compartiment, un médicament et vous n\'aurez plus à vous en soucier !</string>
    <string name="description_button_layout_pilulier">Bouton compartiment pilulier</string>

    <!-- COMPARTIMENT -->
    <string name="nom_edittext_layout_compartiment">Nom du médicament</string>
    <string name="duree_textview_layout_compartiment">Durée du traitement</string>
    <string name="conditions_textview_layout_compartiment">Conditions de prises</string>
    <string name="ptitdej_textview_layout_compartiment">Petit-déjeuner</string>
    <string name="dejeuner_textview_layout_compartiment">Déjeuner</string>
    <string name="diner_textview_layout_compartiment">Dîner</string>
    <string name="coucher_textview_layout_compartiment">Au coucher</string>
    <string name="heureperso_textview_layout_compartiment">Heure personnalisée</string>
    <string name="heurepersohint_checkbox_layout_compartiment">Choisir</string>
    <string name="frequenceperso_textview_layout_compartiment">Fréquence personnalisée</string>
    <string name="lundi_togglebutton_layout_compartiment">L</string>
    <string name="marmer_togglebutton_layout_compartiment">M</string>
    <string name="jeudi_togglebutton_layout_compartiment">J</string>
    <string name="vendredi_togglebutton_layout_compartiment">V</string>
    <string name="samedi_togglebutton_layout_compartiment">S</string>
    <string name="dimanche_togglebutton_layout_compartiment">D</string>
    <string name="notes_textview_layout_compartiment">Notes</string>
    <string name="enregistrer_button_layout_compartiment">Enregistrer</string>
    <string name="annuler_button_layout_compartiment">Annuler</string>
    <string-array name="type_duree_traitement">
        <item>Jours</item>
        <item>Semaines</item>
        <item>Mois</item>
        <item>Années</item>
    </string-array>

    <!-- Historique -->
    <string name="titre_textview_layout_historique">Retrouvez votre historique complet</string>

    <!-- REPERTOIRE -->
    <string name="titre_textview_layout_repertoire">Votre fille, votre mari&#8230; Ils seront maintenant alertés automatiquement</string>
    <string name="ajouter_button_layout_repertoire">Ajouter</string>
    <string name="editer_button_layout_repertoire">Editer</string>
    <string name="supprimer_button_layout_repertoire">Supprimer</string>

    <!-- AJOUT CONTACT -->
    <string name="titre_textview_layout_ajoutcontact">Pour chaque contact, \ndéfinissez VOTRE niveau d\'alerte</string>
    <string name="ajouter_button_layout_ajoutcontact">Enregistrer</string>
    <string name="prenom_textview_layout_ajoutcontact">Prenom</string>
    <string name="nom_textview_layout_ajoutcontact">Nom</string>
    <string name="adresse_textview_layout_ajoutcontact">Adresse email</string>
    <string name="numero_textview_layout_ajoutcontact">Numéro de téléphone</string>
    <string name="alerte_textview_layout_ajoutcontact">Prévenir par&#8230;</string>
    <string name="mail_checkbox_layout_ajoutcontact">Mail</string>
    <string name="sms_checkbox_layout_ajoutcontact">SMS</string>

    <!-- PROFIL -->
    <string name="titre_textview_layout_profil">Profil</string>
    <string name="prenom_textview_layout_profil">Prénom</string>
    <string name="nom_textview_layout_profil">Nom</string>
    <string name="vosheures_textview_layout_profil">Vos heures de référence</string>
    <string name="password_button_layout_profil">Changer le mot de passe</string>
    <!-- PROFIL - POPUP EDIT PSWD -->
    <string name="actuel_textview_layout_profil">Mot de passe actuel</string>
    <string name="actuel_edittext_ayout_profil">Ancien mot de passe</string>
    <string name="nouveau_textview_layout_profil">Nouveau mot de passe</string>
    <string name="nouveau_edittext_layout_profil">Nouveau mot de passe</string>
    <string name="confnouveau_edittext_layout_profil">Confirmation nouveau mot de passe</string>
    <string name="confirmer_button_layout_profil">Confirmer</string>
    <string name="annuler_button_layout_profil">Annuler</string>

    <!-- AUTHENTIFICATION -->
    <string name="connexion_button_layout_authentification">Connexion</string>
    <string name="sinscrire_button_layout_authentification">S\'inscrire</string>
    <string name="problemeconnexion_button_layout_authentification">Problème de connexion ?</string>
    <string name="logo_imageview_layout_authentification">logo remmeds</string>
    <string name="mail_imageview_layout_authentification">ic_mail</string>
    <string name="password_imageview_layout_authentification">ic_password</string>

    <string name="mail_field">mail_field</string>
    <string name="password_field">password_field</string>
    <string name="connexion_button">connexion_button</string>

    <!-- INSCRIPTION -->
    <string name="mail_edittext_layout_inscription">Adresse email</string>
    <string name="password_edittext_layout_inscription">Mot de passe</string>
    <string name="passwordconf_edittext_layout_inscription">Répéter le mot de passe</string>
    <string name="conditions_checkbox_layout_inscription">J\'accepte les Conditions d\'utilisation</string>
    <string name="valider_burrton_layout_inscription">Valider</string>

    <!-- REFRESH -->
    <string name="appuyez_textview_layout_refresh">Appuyez pour rafraîchir</string>

    <!-- ABOUT -->
    <string name="partner_textview_layout_about">Notre partenaire :</string>
    <string name="version_textview_layout_about">Version : 0.33</string>
    <string name="authortitle_textview_layout_about">Auteurs :</string>
    <string name="MFO_textview_layout_about">Mathieu FOUCHER\n
      Chef de projet et développeur Android</string>
    <string name="OCA_textview_layout_about">Oussama CALLAS\n
      Développeur Android</string>
    <string name="QNI_textview_layout_about">Quentin NICOLAS\n
      Développeur Android/API</string>
    <string name="KHA_textview_layout_about">Koceila HADDOUCHE\n
      Développeur Python</string>

    <!-- NOMBRES -->
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>

</resources>
