<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_accueil"
            android:icon="@drawable/ic_home"
            android:title="@string/accueil" />
        <item
            android:id="@+id/nav_profil"
            android:icon="@drawable/ic_profile"
            android:title="@string/profil" />
        <item
            android:id="@+id/nav_gestion"
            android:icon="@drawable/ic_pillbox"
            android:title="@string/gestion" />
        <item
            android:id="@+id/nav_repertoire"
            android:icon="@drawable/ic_contacts"
            android:title="@string/repertoire" />
        <item
            android:id="@+id/nav_historique"
            android:icon="@drawable/ic_history"
            android:title="@string/historique" />
        <item
            android:id="@+id/nav_disconnect"
            android:icon="@drawable/ic_sign_out"
            android:title="@string/disconnect" />
    </group>


</menu>